2014-08-23  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>
	* coders/png.c: Fixed handling of transparency when writing
	indexed PNG. Reference: SourceForge Bug tracker [bugs:#267]
        Transparency lost when converting from GIF to PNG.

2014-08-17  Jaroslav Fojtik  <JaFojtik@seznam.cz>

        * VisualMagick\configure\configure.cpp Remove webp when attempting
	to compile with Visual Studio 6.

2014-08-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Update for 1.3.20 release.

	* www/index.rst: Update for 1.3.20 release.

	* version.sh: Update library versioning for next release.

2014-08-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* png: Updated libpng to 1.6.12 release.

	* zlib: Updated zlib to 1.2.8 release.

2014-08-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Updated NEWS file to document changes since previous
	release.

2014-08-09  Jaroslav Fojtik  <JaFojtik@seznam.cz>

        * coders/webp.c webp cannot be compiled when HasWEBP is not set.

2014-08-08  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c: Eliminated palette and depth optimization (see
	https://sourceforge.net/p/graphicsmagick/feature-requests/35/).

2014-08-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* dcraw/dcraw.c: Fix dcraw build for x64 target when only WIN64 is
	defined (by also defining WIN32).

	* VisualMagick/configure/configure.cpp (write_file): Fix problem
	with x64 project naming which caused object file disambiguation
	not to work for x64 target. Make line terminations consistent.

2014-08-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* VisualMagick: VisualMagick fixes by Dirk Lemstra to improve
	configure program so that it is possible to select QuantumDepth,
	OpenMP, and 64-bit build via configure dialog boxes as well as
	options on the command line.  Also automatically detects and deals
	with similarly named files in subdirectories so that WebP support