@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020140817"
-#define public MagickPackageReleaseDate "snapshot-20140817"
+#define public MagickPackageVersionAddendum ".020140823"
+#define public MagickPackageReleaseDate "snapshot-20140823"
