@@ -35,9 +35,32 @@
 <div class="document">
 
 
+<p>2014-08-23  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>magick/enum_strings.c (StringToCompositeOperator): Support
+composite operator names similar to the major brand, without
+losing any compatibility with previous naming.</li>
+</ul>
+</blockquote>
+<dl class="docutils">
+<dt>2014-08-23  Glenn Randers-Pehrson  &lt;<a class="reference external" href="mailto:glennrp&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">glennrp<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</dt>
+<dd><ul class="first last simple">
+<li>coders/png.c: Fixed handling of transparency when writing
+indexed PNG. Reference: SourceForge Bug tracker [bugs:#267]
+Transparency lost when converting from GIF to PNG.</li>
+</ul>
+</dd>
+</dl>
 <p>2014-08-17  Jaroslav Fojtik  &lt;<a class="reference external" href="mailto:JaFojtik&#37;&#52;&#48;seznam&#46;cz">JaFojtik<span>&#64;</span>seznam<span>&#46;</span>cz</a>&gt;</p>
 <blockquote>
-* VisualMagickconfigureconfigure.cpp Remove webp when attempting to compile with Visual Studio 6.</blockquote>
+<blockquote>
+* VisualMagickconfigureconfigure.cpp Remove webp when attempting</blockquote>
+<div class="system-message">
+<p class="system-message-title">System Message: WARNING/2 (<tt class="docutils">/home/bfriesen/src/graphics/GM/www/Changelog.rst</tt>, line 15)</p>
+Block quote ends without a blank line; unexpected unindent.</div>
+<p>to compile with Visual Studio 6.</p>
+</blockquote>
 <p>2014-08-16  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
